--- a/econ101.html
+++ b/econ101.html
@@ -1075,7 +1075,7 @@
                 <p>When prices changes, so does the budget line.</p>
                 <table>
                     <tr>
-                        <td><!-- add img1--></td>
+                        <td><img src="./image/econ101/lec11_1.png"></td>
                         <td>
                             <ul>
                                 <li>
@@ -1111,7 +1111,7 @@
                                 <li>shift to left if income decreases; otherwise, shift to right</li>
                             </ul>
                         </td>
-                        <td><!-- add img2--></td>
+                        <td><img src="./image/econ101/lec11_2.png"></td>
                     </tr>
                     <tr>
                         <td colspan="2"></td>
@@ -1120,29 +1120,29 @@
                         <td>
                             Preferences and Indifference Curves
                             <ul>
-                                <li>all points on the indifference curve are preferred to all points below the indifference curve</li>
-                                <li>all points above the indifference curve are preferred to all the points on the indifference curve</li>
+                                <li>all points on the indifference curve<br>are preferred to all points below the indifference curve</li>
+                                <li>all points above the indifference curve<br>are preferred to all the points on the indifference curve</li>
                             </ul>
                         </td>
-                        <td><!-- add img3--></td>
+                        <td><img src="./image/econ101/lec11_3.png"></td>
                     </tr>
                 </table>
                 <br>
                 <p>Example:</p>
-                <table>
+                <table class="textTable">
                     <tr>
-                        <td>For vegetarian, steal is indifference.</td>
-                        <td></td>
+                        <td>For vegetarian, steal is indifference.<br>&nbsp;</td>
+                        <td>&nbsp;&nbsp;&nbsp;</td>
                         <td>For meat-lover, salad is indifference.</td>
                     </tr>
                     <tr>
-                        <td><!-- add img4--></td>
-                        <td></td>
-                        <td><!-- add img5--></td>
+                        <td><img src="./image/econ101/lec11_4.png"></td>
+                        <td>&nbsp;&nbsp;&nbsp;</td>
+                        <td><img src="./image/econ101/lec11_5.png"></td>
                     </tr>
                     <tr>
                         <td>Increase the quantity of steal won't make vegetarian happy!</td>
-                        <td></td>
+                        <td>&nbsp;&nbsp;&nbsp;</td>
                         <td>Increase the quantity of salad won't make meat-lover happy!</td>
                     </tr>
                 </table>
@@ -1159,7 +1159,7 @@
                 </ul>
                 <table>
                     <tr>
-                        <td><!-- add img6--></td>
+                        <td><img src="./image/econ101/lec11_6.png"></td>
                         <td>
                             Example:<br>
                             At point C, we give up 2 units of good <span class="math">A</span> to exchange 1 more unit of good <span class="math">B</span>.<br>
@@ -1172,28 +1172,28 @@
                 </table>
                 <br>
                 <b>Degree of Substitutability</b>
-                <ul><li>the shape of the indifference curves reveals  the degree of substitutability between two goods</li></ul>
+                <ul><li>the shape of the indifference curves reveals the degree of substitutability between two goods</li></ul>
                 <table class="textTable">
                     <tr>
-                        <td><!-- add img7--></td>
-                        <td></td>
-                        <td><!-- add img8--></td>
-                        <td></td>
-                        <td><!-- add img9--></td>
+                        <td><img src="./image/econ101/lec11_7.png"></td>
+                        <td>&nbsp;&nbsp;&nbsp;</td>
+                        <td><img src="./image/econ101/lec11_8.png"></td>
+                        <td>&nbsp;&nbsp;&nbsp;</td>
+                        <td><img src="./image/econ101/lec11_9.png"></td>
                     </tr>
                     <tr>
                         <td>
                             Ordinary Goods<br>
                             e.g. movie and pop
                         </td>
-                        <td></td>
+                        <td>&nbsp;&nbsp;&nbsp;</td>
                         <td>Perfect Substitutes<br>
-                            e.g. different brands of pens in campus bookstore and local grocery store. (see explanation 1)
+                            e.g. different brands of pens in campus bookstore<br>and local grocery store. (see explanation 1)
                         </td>
-                        <td></td>
+                        <td>&nbsp;&nbsp;&nbsp;</td>
                         <td>
-                            Perfect Complements
-                            e.g. left shoe and right shoe (one more left/right shoe without the other one is useless!)
+                            Perfect Complements<br>
+                            e.g. left shoe and right shoe<br>(one more left/right shoe<br>without the other one is useless!)
                         </td>
                     </tr>
                 </table>
@@ -1232,9 +1232,9 @@
                             From point B, someone buys 6 product A a month when the price of product A is $4. 
                         </td>
                         <td>
-                            <!-- add img10-->
+                            <img src="./image/econ101/lec11_10.png">
                             <br>
-                            <!-- add img11-->
+                            <img src="./image/econ101/lec11_11.png">
                         </td>
                     </tr>
                 </table>
@@ -1251,9 +1251,9 @@
                             and so his/her demand for product A decreases, shown by a leftward shift of his/her demand curve for product A.
                         </td>
                         <td>
-                            <!-- add img12-->
+                            <img src="./image/econ101/lec11_12.png">
                             <br>
-                            <!-- add img13-->
+                            <img src="./image/econ101/lec11_13.png">
                         </td>
                     </tr>
                 </table>
